--- a/main.html
+++ b/main.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Learn</title>
 
-    <link rel="stylesheet" href="CSS/head.css">
+    <link rel="stylesheet" href="CSS/Head.css">
     <link rel="stylesheet" href="CSS/main.css">
 </head>
 
@@ -50,5 +50,6 @@
     <script src="JS/cards.js" defer></script>
     <script src="JS/main.js" defer></script>
 </body>
+
 
 </html>
