--- a/Services.html
+++ b/Services.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Services</title>
     <link rel="stylesheet" href="CSS/Head.css">
-    <link rel="stylesheet" href="CSS/services.css">
+    <link rel="stylesheet" href="CSS/Services.css">
 </head>
 
 <body>
@@ -55,5 +55,6 @@
         <p>© 2025 Private Company Limited. All rights reserved.</p>
     </footer>
 </body>
+
 
 </html>
